[gd_scene load_steps=21 format=4 uid="uid://yao2bnlat2gs"]

[ext_resource type="Texture2D" uid="uid://btdg42rwhitjt" path="res://World/walls.png" id="1_fi303"]
[ext_resource type="Script" path="res://Levels/level_3.gd" id="1_m1peo"]
[ext_resource type="PackedScene" uid="uid://gguvth8dwy0r" path="res://Player/skeleton.tscn" id="3_crumj"]
[ext_resource type="Texture2D" uid="uid://cdedorva34wu7" path="res://Effects/Light.png" id="4_yhc4v"]
[ext_resource type="PackedScene" uid="uid://ckuea2t7r0isv" path="res://UI/health_ui.tscn" id="5_rmihe"]
[ext_resource type="FontFile" uid="uid://c5fpeg8tfrjfp" path="res://PixelOperator8.ttf" id="6_cmofv"]
[ext_resource type="PackedScene" uid="uid://cstacl4uln26" path="res://World/chest.tscn" id="7_6lwa7"]
[ext_resource type="Script" path="res://Levels/someLabel.gd" id="7_knt8o"]
[ext_resource type="PackedScene" uid="uid://ch226rdccj0mx" path="res://player_detection_zone.tscn" id="8_e1jmp"]
[ext_resource type="Script" path="res://World/chest3.gd" id="8_eqwrn"]
[ext_resource type="Texture2D" uid="uid://dkxdhmux5113f" path="res://Player/GhostGun.png" id="9_jxjbd"]
[ext_resource type="PackedScene" uid="uid://dxtbv2rwlomxq" path="res://Enemies/true_ghost.tscn" id="10_1bml3"]
[ext_resource type="PackedScene" uid="uid://b46nsbrxd3oe" path="res://game_over.tscn" id="13_c2t46"]
[ext_resource type="PackedScene" uid="uid://clmsrg4qatjci" path="res://next_level.tscn" id="14_234ia"]
[ext_resource type="PackedScene" uid="uid://u0o05i8aypf6" path="res://pause_menu.tscn" id="15_g4hd0"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_gy57s"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7186d"]
texture = ExtResource("1_fi303")
0:0/0 = 0
0:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_gy57s")
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_e14dc"]
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7186d")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pq8ee"]
size = Vector2(48, 66)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gm88m"]
radius = 5.0
height = 22.0

[node name="Level3" type="Node2D"]
script = ExtResource("1_m1peo")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
offset_left = -4.0
offset_right = 212.0
offset_bottom = 323.0
color = Color(0.282763, 0.19515, 0.133943, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAMAP//AAAAAAAAAAALAP//AAAAAAAAAAAKAP//AAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAANAP//AAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAANAA0AAAAAAAAAAAANAA4AAAAAAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAANABIAAAAAAAAAAAANABMAAAAAAAAAAAANABQAAAAAAAAAAAD//w0AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAAAAAAAAAAD//xAAAAAAAAAAAAD//xEAAAAAAAAAAAD//xIAAAAAAAAAAAD//xMAAAAAAAAAAAD//xQAAAAAAAAAAAAAABQAAAAAAAAAAAABABQAAAAAAAAAAAACABQAAAAAAAAAAAADABQAAAAAAAAAAAAEABQAAAAAAAAAAAAFABQAAAAAAAAAAAAGABQAAAAAAAAAAAAHABQAAAAAAAAAAAAIABQAAAAAAAAAAAAJABQAAAAAAAAAAAAKABQAAAAAAAAAAAALABQAAAAAAAAAAAAMABQAAAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAAAAAAAAAD8/wgAAAAAAAAAAAD8/wkAAAAAAAAAAAD8/woAAAAAAAAAAAD8/wsAAAAAAAAAAAD8/wwAAAAAAAAAAAD8/w0AAAAAAAAAAAD8/w4AAAAAAAAAAAD8/w8AAAAAAAAAAAD8/xAAAAAAAAAAAAD8/xEAAAAAAAAAAAD8/xIAAAAAAAAAAAD8/xMAAAAAAAAAAAD8/xQAAAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAAAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAAAAAD9/wwAAAAAAAAAAAD9/w0AAAAAAAAAAAD9/w4AAAAAAAAAAAD9/w8AAAAAAAAAAAD9/xAAAAAAAAAAAAD9/xEAAAAAAAAAAAD9/xIAAAAAAAAAAAD9/xMAAAAAAAAAAAD9/xQAAAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkAAAAAAAAAAAD+/woAAAAAAAAAAAD+/wsAAAAAAAAAAAD+/wwAAAAAAAAAAAD+/w0AAAAAAAAAAAD+/w4AAAAAAAAAAAD+/w8AAAAAAAAAAAD+/xAAAAAAAAAAAAD+/xEAAAAAAAAAAAD+/xIAAAAAAAAAAAD+/xMAAAAAAAAAAAD+/xQAAAAAAAAAAAAOAP//AAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAAAAAAAAAOAA0AAAAAAAAAAAAOAA4AAAAAAAAAAAAOAA8AAAAAAAAAAAAOABAAAAAAAAAAAAAOABEAAAAAAAAAAAAOABIAAAAAAAAAAAAOABMAAAAAAAAAAAAOABQAAAAAAAAAAAAPAP//AAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA8AAAAAAAAAAAAPABAAAAAAAAAAAAAPABEAAAAAAAAAAAAPABIAAAAAAAAAAAAPABMAAAAAAAAAAAAPABQAAAAAAAAAAAAQAP//AAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAAAAAAAAAAQAA0AAAAAAAAAAAAQAA4AAAAAAAAAAAAQAA8AAAAAAAAAAAAQABAAAAAAAAAAAAAQABEAAAAAAAAAAAAQABIAAAAAAAAAAAAQABMAAAAAAAAAAAAQABQAAAAAAAAAAAARAP//AAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAARAA0AAAAAAAAAAAARAA4AAAAAAAAAAAARAA8AAAAAAAAAAAARABAAAAAAAAAAAAARABEAAAAAAAAAAAARABIAAAAAAAAAAAARABMAAAAAAAAAAAARABQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAABAAcAAAAAAAAAAAAAAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAwAAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAIAA4AAAAAAAAAAAAHAA4AAAAAAAAAAAAGAA4AAAAAAAAAAAAFAA4AAAAAAAAAAAAEAA4AAAAAAAAAAAADAA4AAAAAAAAAAAACAA4AAAAAAAAAAAABAA4AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAABAA8AAAAAAAAAAAACAA8AAAAAAAAAAAADAA8AAAAAAAAAAAAEAA8AAAAAAAAAAAAFAA8AAAAAAAAAAAAGAA8AAAAAAAAAAAAHAA8AAAAAAAAAAAAJAA8AAAAAAAAAAAAIAA8AAAAAAAAAAAAJABAAAAAAAAAAAAAIABAAAAAAAAAAAAAHABAAAAAAAAAAAAAGABAAAAAAAAAAAAAFABAAAAAAAAAAAAAEABAAAAAAAAAAAAADABAAAAAAAAAAAAACABAAAAAAAAAAAAABABAAAAAAAAAAAAAAABAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_e14dc")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(19, 14)
limit_left = -5
limit_top = -8
limit_right = 260
limit_bottom = 330
limit_smoothed = true

[node name="Skeleton" parent="." instance=ExtResource("3_crumj")]
position = Vector2(19, 14)

[node name="PointLight2D" type="PointLight2D" parent="Skeleton"]
position = Vector2(-1, 3.5)
scale = Vector2(1, 1.01172)
color = Color(1, 0.806636, 0.611801, 1)
energy = 0.46
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 0.6
texture = ExtResource("4_yhc4v")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton"]
remote_path = NodePath("../../Camera2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource("5_rmihe")]

[node name="Label" type="Label" parent="."]
z_index = -1
offset_left = 46.0
offset_top = 10.0
offset_right = 151.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.540732, 0.45854, 0.391274, 1)
theme_override_fonts/font = ExtResource("6_cmofv")
theme_override_font_sizes/font_size = 8
text = "cofres dan 
diferentes tipos 
de armas."
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
z_index = -1
offset_left = 13.0
offset_top = 158.0
offset_right = 118.0
offset_bottom = 188.0
theme_override_colors/font_color = Color(0.540732, 0.45854, 0.391274, 1)
theme_override_fonts/font = ExtResource("6_cmofv")
theme_override_font_sizes/font_size = 8
text = "Las balas azules
 da√±an a los
fantasmas"
horizontal_alignment = 1
script = ExtResource("7_knt8o")

[node name="playerDetectionZone" parent="Label2" instance=ExtResource("8_e1jmp")]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="Label2/playerDetectionZone" index="0"]
position = Vector2(172, -11)
shape = SubResource("RectangleShape2D_pq8ee")

[node name="Chest" parent="." instance=ExtResource("7_6lwa7")]
position = Vector2(182, 25)
script = ExtResource("8_eqwrn")

[node name="GhostGun" type="Sprite2D" parent="Chest"]
position = Vector2(-1, 12)
texture = ExtResource("9_jxjbd")

[node name="item_zone" type="Area2D" parent="Chest/GhostGun"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest/GhostGun/item_zone"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gm88m")
debug_color = Color(0.7, 0, 0.545753, 0.42)

[node name="TrueGhost" parent="." instance=ExtResource("10_1bml3")]
position = Vector2(108, 180)

[node name="GameOver" parent="." instance=ExtResource("13_c2t46")]
visible = false

[node name="NextLevel" parent="." instance=ExtResource("14_234ia")]
position = Vector2(27, 297)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer2" instance=ExtResource("15_g4hd0")]

[connection signal="health_depleted" from="Skeleton" to="." method="_on_skeleton_health_depleted"]
[connection signal="body_entered" from="Label2/playerDetectionZone" to="Label2" method="_on_player_detection_zone_body_entered"]
[connection signal="body_entered" from="Chest/ChestZone" to="Chest" method="_on_chest_zone_body_entered"]
[connection signal="body_exited" from="Chest/ChestZone" to="Chest" method="_on_chest_zone_body_exited"]
[connection signal="body_entered" from="Chest/GhostGun/item_zone" to="Chest" method="_on_item_zone_body_entered"]

[editable path="Label2/playerDetectionZone"]
[editable path="Chest"]
